'@startuml
title 充电桩状态图
skinparam style strictuml

state "空闲" as IDLE
state "使用中" as CHARGING
state "故障" as FAULT

[*] --> IDLE : 系统初始化
IDLE --> CHARGING : 用户启动充电
CHARGING --> IDLE : 结束充电/自动扣费完成
IDLE --> FAULT : 提交故障报修
FAULT --> IDLE : 报修处理完成
FAULT --> CHARGING : 维修后测试启动
CHARGING --> FAULT : 充电异常中断

note bottom of IDLE : 桩可用
note bottom of CHARGING : 正在充电
note bottom of FAULT : 需维修处理
@enduml